--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "janrain-login-client-sdk",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A login client for Janrain currently only supporting Register Native",
   "main": "src/index.js",
   "scripts": {
@@ -10,5 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scrofungulus/janrain-login-client-sdk.git"
   }
 }
